--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         <activity android:name=".flowactivities.SimpleFlowActivity"/>
         <activity android:name=".flowactivities.MapFlowActivity"/>
         <activity android:name=".flowactivities.ZipFlowActivity"/>
+        <activity android:name=".flowactivities.TakeFlowActivity"/>
+
 
 
         <activity android:name=".MainActivity">
