--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name=".flowactivities.ZipFlowActivity"/>
         <activity android:name=".flowactivities.TakeFlowActivity"/>
         <activity android:name=".flowactivities.CombineFlowActivity"/>
+        <activity android:name=".flowactivities.FilterFlowActivity"/>
 
 
 
